--- a/asset/css/style.less
+++ b/asset/css/style.less
@@ -4,6 +4,7 @@
 
 h1{
   color:@color-primary;
+  text-align:center;
 }
 
 h3{
@@ -12,4 +13,10 @@ h3{
 
 a:hover{
 	color:green;
+}
+
+main{
+	
+	width: 600px;
+	margin-left: 30%;
 }
