--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,10 +1,15 @@
 h1 {
   color: #00ffff;
+  text-align: center;
 }
 h3 {
   color: #ff0000;
 }
 a:hover {
   color: green;
+}
+main {
+  width: 600px;
+  margin-left: 30%;
 }
 /*# sourceMappingURL=style.css.map */
