--- a/asset/css/style.less
+++ b/asset/css/style.less
@@ -20,3 +20,11 @@ main{
 	width: 600px;
 	margin-left: 30%;
 }
+
+nav{
+	
+	flaot:left;
+	width : 100px;
+	height:200px;
+	background-color:grey;
+}
