--- a/asset/css/style.less
+++ b/asset/css/style.less
@@ -24,9 +24,13 @@ main{
 nav{
 	
 	flaot:left;
-	width : 100px;
-	height:200px;
+	width : 250px;
+	height:350px;
 	background-color:grey;
 	display: block;
 	margin: 3px;
+}
+
+nav a{
+	margin:3px;
 }
