--- a/asset/css/style.less
+++ b/asset/css/style.less
@@ -6,11 +6,12 @@
 
 .main {
 	width : 960px;
-	margin : 10px auto;
+	margin : 15px ;
+
 }
 .main > div {
 	float : left;
-	margin : 0 10px;
+	margin : 0 15px;
 }
 
 
@@ -44,7 +45,7 @@ a:hover{
 .etc { width : 940px; }
 
 
-.content { width : 780px; }
+.content { width : 780px; img{width:500px;height:auto; margin:5px;}}
 
 
 
@@ -57,7 +58,7 @@ a:hover{
 		margin : 0 0.5%;
 	}
 
-	.content { width : 82.3%; }
+	.content { width : 82.3%; img{width:100%; height:auto;margin:5px;} }
 
 	.etc { width : 99.9%; }
 }
@@ -74,5 +75,8 @@ a:hover{
 	.content, .etc{ 
 		width : 98%; 
 		float : none;
+		img{width:100%;
+		height:auto;
+		margin:5px;}
 	}
 }
