--- a/asset/css/style.less
+++ b/asset/css/style.less
@@ -1,11 +1,13 @@
-@color-primary: cyan;
+@color-primary: red;
 
 @color-sec: red;
 @column-width    : unit((96px / @font-root), rem);
-@font-root       : 16px;
+@font-root       : 1.9rem;
 
 .main {
-	width : 940px;
+	width : 93.0rem;
+	background-color: #eeeeee;
+	color:#4d4d4d;
 
 
 }
@@ -40,7 +42,7 @@ a:hover{
 
 
 .menu{
-	width : 140px;
+	width : 10.0rem;
 	height:auto;
 	float:left;
 
@@ -48,14 +50,15 @@ a:hover{
 }
 .menu a{
 	text-decoration:none;
-	color:blue;
+	color:#8e0c0c;
+	font-size: 1.5rem;
 
 
 }
 
 .btn{
 	display:block;
-	margin-top:15px;
+	margin-top:10px;
 }
 
 .menu a:hover{
@@ -67,10 +70,10 @@ clear:both;
 	width:940;
 }
 
-.etc { width : 940px; }
+.etc { width : 94.0rem; }
 
 
-.content { width : 780px; img{width:500px;height:auto; margin:5px;} float:right;}
+.content { width : 78.0rem; img{width:50.0rem;height:auto; margin:5px;} float:right;line-height:1.5rem;}
 
 
 
